# binom-eval

./: .gitignore  AGENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/example-skill/evals/: _assertions.py  conftest.py  evals.json  test_evals.py
scripts/: release.sh
src/binom_eval/: __init__.py  assertions.py  driver.py  grading.py  loading.py  plugin.py  posterior.py  progress.py  reporting.py  runner.py  stream_json.py  suite.py  text_utils.py
src/binom_eval/runner/: __init__.py  claude_runner.py  cursor_runner.py  retry.py
tests/: __init__.py  test_grading.py  test_plugin.py  test_runner.py  test_stream_json.py  test_suite.py  test_text_utils.py
tests/runner/: __init__.py  test_claude_runner.py  test_cursor_runner.py  test_retry.py  test_runner.py
